overflow-x: hidden for .body-wrap - horizontal scrollbar fix

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -39,6 +39,7 @@ body
   //display: flex
   min-height: 100%
   background: none
+  overflow-x: hidden
 
 .hidden
   display: none
